# pytest-envx

./: .pre-commit-config.yaml  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/workflows/: check.yaml  release.yaml
docs/: README.ru.md
src/pytest_envx/: __version__.py
